syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-server/service/relation/api/v1";

service GroupAnnouncementReadService {
  rpc MarkAnnouncementAsRead(MarkAnnouncementAsReadRequest) returns (MarkAnnouncementAsReadResponse);
  rpc GetReadUsers(GetReadUsersRequest) returns (GetReadUsersResponse);
  rpc GetAnnouncementReadByUserId(GetAnnouncementReadByUserIdRequest) returns (GetAnnouncementReadByUserIdResponse);
}

message MarkAnnouncementAsReadRequest {
  // @inject_tag: json:"group_id"
  uint32 GroupId = 1;
  // @inject_tag: json:"announcement_id"
  uint32 AnnouncementId = 2;
  // @inject_tag: json:"user_ids"
  repeated string UserIds = 3;
}

message MarkAnnouncementAsReadResponse {
  // @inject_tag: json:"id"
  uint32 ID = 1;
}

message GetReadUsersRequest {
  // @inject_tag: json:"group_id"
  uint32 GroupId = 1;
  // @inject_tag: json:"announcement_id"
  uint32 AnnouncementId = 2;
}

message GetReadUsersResponse {
  // @inject_tag: json:"announcement_read_users"
  repeated AnnouncementRead AnnouncementReadUsers = 1;
}

message AnnouncementRead {
  // @inject_tag: json:"group_id"
  uint32 GroupId = 1;
  // @inject_tag: json:"announcement_id"
  uint32 AnnouncementId = 2;
  // @inject_tag: json:"user_id"
  string UserId = 3;
  // @inject_tag: json:"read_at"
  uint64 ReadAt = 4;
  // @inject_tag: json:"id"
  uint32 ID = 5;
}

message GetAnnouncementReadByUserIdRequest {
  // @inject_tag: json:"group_id"
  uint32 GroupId = 1;
  // @inject_tag: json:"announcement_id"
  uint32 AnnouncementId = 2;
  // @inject_tag: json:"user_id"
  string UserId = 3;
}

message GetAnnouncementReadByUserIdResponse {
  // @inject_tag: json:"group_id"
  uint32 GroupId = 1;
  // @inject_tag: json:"announcement_id"
  uint32 AnnouncementId = 2;
  // @inject_tag: json:"user_id"
  string UserId = 3;
  // @inject_tag: json:"read_at"
  uint64 ReadAt = 4;
  // @inject_tag: json:"id"
  uint32 ID = 5;
}